--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="items" id="items"></div>
+    </main>
+    <script src="scripts.js" type="module"></script>
   </body>
 </html>
