add item and show item functions working

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </header>
     <main>
       <div class="items" id="items"></div>
+      <!-- Moods Displayed Here -->
     </main>
+    <footer></footer>
     <script src="scripts.js" type="module"></script>
   </body>
 </html>
