connect cart to footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,17 @@
       <div class="items" id="items"></div>
       <!-- Moods Displayed Here -->
     </main>
-    <footer></footer>
+    <footer>
+      <div id="cart-quantity">
+        <!-- cart quantity displayed here -->
+      </div>
+      <ul id="item-list">
+        <!-- cart items dispalyed here -->
+      </ul>
+      <div id="total">
+        <!-- cart total displayed here -->
+      </div>
+    </footer>
     <script src="scripts.js" type="module"></script>
   </body>
 </html>
