update add/remove cart items

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- cart quantity displayed here -->
       </div>
       <ul id="item-list">
-        <!-- cart items dispalyed here -->
+        <!-- cart items displayed here -->
       </ul>
       <div id="total">
         <!-- cart total displayed here -->
