--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Cart</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#cart-quantity">Cart</a></li>
         </ul>
       </nav>
     </header>
     <main>
+      <div id="about"></div>
       <div class="items" id="items"></div>
       <!-- Moods Displayed Here -->
     </main>
